data/all_generated_tests/raw_wast_tests/block_EdgeCaseFailuresinbr_table_29.wast
;; 10. Test with a `block` starting with a `br_table` doing a direct branch to the block's own label followed by operations:     - A `block` starts with a `br_table` targeting its own label directly before executing further instructions.     - Specific Constraint: Validates the execution and stack restoration for recursively branching blocks.     - Edge Case: Checks for invalid recursion and re-entry point management within the same block.

(assert_invalid
  (module (func $block-br_table-recursive
    (block (result i32)
      (br_table 0 0 (i32.const 0))
      (i32.const 1)
    )
  ))
  "type mismatch"
)